# ROS2_CIA402

./: .env.example  .gitattributes  .gitignore  README.md
Reference/: cmmt_error_catalog.json
axis_server/: cmmt_error_catalog.py  control_panel.py  csp_trajectory_generator.py  server.py  start_server.sh  start_with_panel.sh
cia402/: object_dictionary.py  state_machine.py  virtual_servo.py
diagnostics/: cmmt_sync_probe.py  dump_pdo_mapping.py  list_pysoem_adapters.py  pysoem_single_axis_smoke_test.py
docker/axis_panel/: Dockerfile
docker/axis_server/: Dockerfile  compose.yaml
docker/ros/: Dockerfile  compose.yaml
docker/ros_bridge/: Dockerfile
docker/ros_control_panel/: Dockerfile
docker/ros_moveit/: Dockerfile
ethercat/: csp_trajectory_generator.py  distributed_clock.py  mock_master.py  mock_slave.py  pdo_codec.py  pdo_mapper.py  pysoem_master.py  rxpdo.py  txpdo.py  working_counter.py
interfaces/: servo_interface.py
motion/: axis.py
ros/: axis_runtime_config.py  bridge.py  control_panel.py
ros_moveit/: README.md
ros_moveit/ros2_cia402_cartesian_description/: CMakeLists.txt  package.xml
ros_moveit/ros2_cia402_cartesian_description/launch/: display.launch.py
ros_moveit/ros2_cia402_cartesian_description/urdf/: cartesian_3axis.urdf.xacro
ros_moveit/ros2_cia402_cartesian_moveit_config/: CMakeLists.txt  README.md  package.xml
scripts/host/: adapters.sh  panel.sh  service.sh  start.sh  stop.sh
scripts/ros/: bridge.sh  control_panel.sh  control_panel_entrypoint.sh  moveit.sh  panel.sh  start.sh  stop.sh
scripts/windows/: axis_server.ps1  (+1 more)
(+7 files in other folders)
