<?xml version="1.0"?>
<package format="3">
  <name>ros2_cia402_cartesian_description</name>
  <version>0.1.0</version>
  <description>Simple 3-axis Cartesian robot description for ROS2 CiA402 MoveIt tests.</description>
  <maintainer email="user@example.com">ROS2_CIA402</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
